<?xml version="1.0"?>
<package format="2">
  <name>Read</name>
  <version>1.0.0</version>
  <description>
    This package is used to read data
  </description>
  <maintainer email="wanghuaihu@seu.edu.cn">Wang Huaihu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
